@@ -85,17 +85,6 @@
 					<generateGitPropertiesFile>true</generateGitPropertiesFile>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>
-						@{argLine}
-						--add-opens hosh.spi/hosh.spi=ALL-UNNAMED
-						--add-opens hosh.runtime/hosh.runtime=ALL-UNNAMED
-					</argLine>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
 
